# src/api/dto/mod.rs
@@ -2,6 +2,6 @@ mod page;
 mod story;
 mod task;
 
-pub use page::{PageParams, PageToken};
-pub use story::{Stories, StoryRequest};
+pub use page::{Page, PageParams, PageToken};
+pub use story::StoryRequest;
 pub use task::{CreateTaskRequest, TaskParams, UpdateTaskRequest};
